# CurioCat

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.zh-CN.md  TECHNICAL_DEEP_DIVE.md  alembic.ini  coffee_chat_hank_abel.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_feedback_edge.py  003_three_layer_causal.py
curiocat/: config.py  exceptions.py  main.py
curiocat/api/models/: analysis.py  graph.py  scenarios.py
curiocat/api/routes/: analysis.py  causal_analysis.py  events.py  export.py  graph.py  operations.py  scenarios.py
curiocat/db/: models.py  session.py
curiocat/evidence/: nli_scorer.py  scorer.py  web_search.py
curiocat/graph/: belief_propagation.py  critical_path.py  focus.py  path_finder.py  propagation.py  scenario_diff.py  sensitivity.py  summarizer.py
curiocat/llm/: cache.py  client.py  embeddings.py
curiocat/llm/prompts/: __init__.py  bias_detection.py  causal_inference.py  claim_extraction.py  discovery.py  evidence_search.py  graph_operations.py  scenario_analysis.py  (+1 more)
curiocat/pipeline/: auto_explorer.py  bias_auditor.py  causal_inferrer.py  claim_extractor.py  dag_builder.py  discovery.py  evidence_grounder.py  graph_merger.py  graph_ops.py  orchestrator.py  scenario_analyst.py  statistical_validator.py  three_layer_engine.py  validation.py
curiocat/statistical/: __init__.py  granger.py  pc_algorithm.py
docs/: curiocat-product-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
(+65 files in other folders)
